--- a/css/atuacao.css
+++ b/css/atuacao.css
@@ -6,7 +6,7 @@
     padding-bottom: 34px;
 }
 .block-text {
-    background-color: #F5F5F5;
+    background-color: #FFFFFF;
     border-radius: 5px;
     box-shadow: 0 3px 0 #66CDAA;
     color: #626262;
