--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
   position: absolute;
   content: " ";
   width: 3px;
-  background-color: #50D89B;
+  background-color: #2BC793;
   right: 25px;
   margin-left: -1.5px;
 }
@@ -40,8 +40,9 @@
   border-radius: 2px;
   padding: 20px;
   position: relative;
+  background-color: #f5f5f5;
   -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  box-shadow: 0 1px 6px rgba(25, 128, 52, 0.58);
 }
 .timeline > li > .timeline-panel:before {
   position: absolute;
@@ -60,7 +61,7 @@
   right: -14px;
   display: inline-block;
   border-top: 14px solid transparent;
-  border-left: 14px solid #50D89B;
+  border-left: 14px solid rgba(80, 216, 155, 0.4);
   border-right: 0 solid #fff;
   border-bottom: 14px solid transparent;
   content: " ";
