--- a/css/icon.css
+++ b/css/icon.css
@@ -25,6 +25,9 @@
 .icon-App-clean-icon{
 	background:url('icons/App_clean_icon.png') no-repeat center center;
 }
+.icon-car-icon{
+	background:url('icons/car_icon.png') no-repeat center center;
+}
 
 
 
