--- a/css/icon.css
+++ b/css/icon.css
@@ -28,6 +28,10 @@
 .icon-car-icon{
 	background:url('icons/car_icon.png') no-repeat center center;
 }
+.icon-box-icon{
+	background:url('icons/box_icon.png') no-repeat center center;
+}
+
 
 
 
