--- a/css/icon.css
+++ b/css/icon.css
@@ -31,7 +31,9 @@
 .icon-box-icon{
 	background:url('icons/box_icon.png') no-repeat center center;
 }
-
+.icon-Money-icon{
+	background:url('icons/Money-icon.png') no-repeat center center;
+}
 
 
 
