--- a/css/icon.css
+++ b/css/icon.css
@@ -34,6 +34,10 @@
 .icon-Money-icon{
 	background:url('icons/Money-icon.png') no-repeat center center;
 }
+.icon-search-icon{
+	background:url('icons/search-icon.png') no-repeat center center;
+}
+
 
 
 
