--- a/css/icon.css
+++ b/css/icon.css
@@ -37,6 +37,9 @@
 .icon-search-icon{
 	background:url('icons/search-icon.png') no-repeat center center;
 }
+.icon-check-icon{
+	background:url('icons/check-icon.png') no-repeat center center;
+}
 
 
 
