--- a/css/icon.css
+++ b/css/icon.css
@@ -55,7 +55,9 @@
 .icon-Stats-icon{
 	background:url('icons/Stats-icon.png') no-repeat center center;
 }
-
+.icon-invoice-icon{
+	background:url('icons/invoice-icon.png') no-repeat center center;
+}
 
 
 
